syntax = "proto3";
option java_package = "cool.houge.grpc";
option java_multiple_files = true;

import "cool/houge/protos/msg_enums.proto";

message BrokerMsg {
  // 消息类型
  MsgKind kind = 1;
  // 消息ID
  string msgId = 2;
  // 消息发送者
  fixed32 from = 3;
  // 消息接收者
  fixed32 to = 4;
  // 消息内容
  string content = 5;
  // 消息内容类型
  MsgContentType content_type = 6;
  // 扩展参数会原样转发给客户端
  string extra = 9;
}

message BrokerCommand {
  string name = 1;
}

message AttachBrokerRequest {
  string name = 1;
}

message AttachBrokerResponse {
  oneof kind {
    BrokerMsg msg = 1;
    BrokerCommand command = 9;
  }
}

service Broker {

  rpc Attach(AttachBrokerRequest) returns(stream AttachBrokerResponse) {}
}